apps/homarr/homarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homarr
  template:
    metadata:
      labels:
        app: homarr
    spec:
      containers:
      - name: homarr
        image: ghcr.io/ajnart/homarr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7575
        volumeMounts:
        - name: config
          mountPath: /app/data/configs
        - name: data
          mountPath: /data
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: homarr-config-claim
      - name: data
        persistentVolumeClaim:
          claimName: homarr-db-claim
