apps/homarr/homarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik   # or nginx if you're using Nginx
spec:
  rules:
  - host: homarr.home
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: homarr
            port:
              number: 7575
